uefi-macros/tests/ui/fail/entry_bad_attr_arg.rs
#![no_main]

use uefi::prelude::*;

#[entry(some_arg)]
fn main() -> Status {
    Status::SUCCESS
}
